# turtlebot3_net_segway

./: README.md
ap/: CMakeLists.txt  netsegway.cpp  package.xml  readme.md
cloud/: readme.md
cloud/src/netseway_control/: package.xml  setup.cfg  setup.py
cloud/src/netseway_control/netseway_control/: netsegway.py
opencr/: readme.md  setup_rosserial.md  turtlebot3_net_segway.ino  turtlebot3_segway.h
turtlebot3_modeling/: turtlebot3_model.ipynb  turtlebot3_model.py
